Full sanity for local variable tables.